# rust-keyviewer

./: Cargo.toml  README.md  package.json
keyviewer/: Cargo.toml
keyviewer/src/: input.rs  key.rs  main.rs
keyviewer/src/gui/: mod.rs
keyviewer/src/keylog/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/gui/: mod.rs
static/: keyboard-layout.json
