[package]
name = "keyviewer"
publish = false
version = "0.1.0"
authors = ["Carter Tomlenovich <cartertomlenovich@gmail.com>", "Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = ""
readme = "README.md"
homepage = "https://github.com/hyperlisjkdev/rust-keyviewer"
repository = "https://github.com/hyperliskdev/rust-keyviewer"
license = "GPL-3.0"
keywords = ["keyboard-layout"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
raylib = "3.5"
sudo = "0.6"
device_query = "0.2.8"